完成修改功能,加入favicon

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.password=940203
 #配置.xml文件路径
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.cache=false
+spring.thymeleaf.suffix=.html
+
