--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8080
 
 #数据库配置
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/coffeeShop?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=1970j327@Ts
+spring.datasource.password=940203
 
 
 
