--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 #数据库配置
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/coffeeShop?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/coffee
 spring.datasource.username=root
 spring.datasource.password=940203
 
