--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/coffee
 spring.datasource.username=root
 spring.datasource.password=940203
 
-
-
 #配置.xml文件路径
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
 
+#方便修改前端后直接生效
 spring.thymeleaf.cache=false
+
+#打印 sql 检查缓存
+logging.level.com.hwy.proj_425.mapper=debug
