--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.thymeleaf.cache=false
 
 #打印 sql 检查缓存
 logging.level.com.hwy.proj_425.mapper=debug
+
+#logging.level.org.springframework.security=DEBUG
